@@ -56,9 +56,11 @@ gchar*                epc_service_type_build_uri    (EpcProtocol  protocol,
                                                      guint16      port,
                                                      const gchar *path);
 
-EpcProtocol           epc_service_type_get_protocol (const gchar *service_type) G_GNUC_CONST;
+EpcProtocol           epc_service_type_get_protocol (const gchar *service_type) G_GNUC_PURE;
 G_CONST_RETURN gchar* epc_protocol_get_service_type (EpcProtocol  protocol) G_GNUC_CONST;
 G_CONST_RETURN gchar* epc_protocol_get_uri_scheme   (EpcProtocol  protocol) G_GNUC_CONST;
+G_CONST_RETURN gchar* epc_service_type_get_base     (const gchar *type) G_GNUC_PURE;
+
 
 G_END_DECLS
 
